<resources>
    <string name="app_name">FPD</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">login</string>
    <string name="title_activity_user">user</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="login">LOGIN</string>
    <string name="attempts">Attempts:</string>
    <string name="login_page">Login Page</string>
    <string name="title_activity_create_account">create_account</string>
    <string name="title_activity_set_up_a_delivery">Set_up_a_delivery</string>
    <string name="title_activity_edit_existing_delivery">Edit_existing_delivery</string>
    <string name="title_activity_user_profile">user_profile</string>
    <string name="intro1">There are two types of delivery: direct and indirect.</string>
    <string name="intro2">When user A wants to send a parcel to B and A,B are friends, A can setup a direct delivery to B.</string>
    <string name="intro3">When user A wants to send a parcel to B through C and C is a common friend of A,B, A can setup an indirect delivery to B through C.</string>
    <string name="title_activity_set_de">SetDE</string>
    <string name="title_activity_set_ind">SetIND</string>
    <string name="title_activity_rate">rate</string>
</resources>
